# lazy_model

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: github-actions-lint.yml  github-actions-mypy.yml  github-actions-publish-project.yml  github-actions-tests.yml
lazy_model/: __init__.py  nao.py
lazy_model/parser/: lazy_model.py  new.py
tests/: models.py  test_parsing.py
